[package]
name = "command-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
jemallocator = "0.5.4"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.15"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
